--- a/wordle.css
+++ b/wordle.css
@@ -1,11 +1,16 @@
 * {
-    border: 1px solid blue;
+    padding: 2px;
+}
+body {
+    margin: 0 auto;
+    max-width: 650px;
 }
 main {
     width: 500px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin: 0 auto;
 }
 
 main > div {
@@ -18,12 +23,31 @@ main > div > div {
     padding: 5px;
     height: 20px;
     width: 20px;
+    border: 2px solid red;
 }
-
+.incorrect {
+    background-color: grey;
+}
 .letterExists {
     background-color: orange;
 }
 
 .sameLetterSamePlace {
     background-color: lime;
+}
+
+
+
+.key {
+    flex-basis: auto;
+    height: 50px;
+    width: 50px;
+    justify-content: space-around;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
