--- a/wordle.css
+++ b/wordle.css
@@ -107,16 +107,16 @@ main > div > div {
 
 /* modal dialiogues */
 #result {
+    display: flex;
     box-sizing: border-box;
     font-family: 'Fjalla One', sans-serif;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    left: 50%;
+    top: 50%; 
+    margin-left: -150px;
+    margin-top: -150px;
     opacity: 0;
     pointer-events: none;
 }
@@ -131,7 +131,7 @@ main > div > div {
     max-width: 100%;
     padding: 30px 50px;
     border-radius: 20px;
-    margin-left: 150px;
+    justify-content: center;
     
 }
 
